Primo tentativo con i tasti

--- a/www/index.html
+++ b/www/index.html
@@ -13,13 +13,54 @@
 			position: absolute;
 			top:  10px;
 			left: 10px;
+			width: 320px;
+			height: 200px;
 		}
 
 		#display2 { 
 			position: absolute;
 			top:  180px;
 			left:  10px;
+			width: 320px;
+			height: 200px;
 		}
+		
+		#abs_inc { 
+			position: absolute;
+			top:  210px;
+			left:  10px;
+		}
+
+		#mm_inch { 
+			position: absolute;
+			top:  210px;
+			left:  150px;
+		}
+		
+		.myButton {
+			-moz-box-shadow:inset 0px 34px 0px -15px #b54b3a;
+			-webkit-box-shadow:inset 0px 34px 0px -15px #b54b3a;
+			box-shadow:inset 0px 34px 0px -15px #b54b3a;
+			background-color:#a73f2d;
+			border:1px solid #241d13;
+			display:inline-block;
+			cursor:pointer;
+			color:#ffffff;
+			font-family:Arial;
+			font-size:21px;
+			font-weight:bold;
+			padding:9px 23px;
+			text-decoration:none;
+			text-shadow:0px -1px 0px #7a2a1d;
+		}
+		.myButton:hover {
+			background-color:#b34332;
+		}
+		.myButton:active {
+			position:relative;
+			top:1px;
+		}
+		
 	</style>
 
 	<script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
@@ -31,7 +72,11 @@
 </head>
 
 <body>
-	<canvas id="display1" width="320" height="200"></canvas>
-	<canvas id="display2" width="320" height="200"></canvas>
+	<canvas id="display1"></canvas>
+	<canvas id="display2"></canvas>
+
+	<a id="abs_inc" class="myButton">ABS</a>
+	<a id="mm_inch" class="myButton">MM</a>
+
 </body>
 </html>
