Aggiunti i pulsanti originali

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,18 @@
 			top:  210px;
 			left:  150px;
 		}
+
+		#button_units { 
+			position: absolute;
+			top:  30px;
+			left:  240px;
+		}
+
+		#button_mode { 
+			position: absolute;
+			top:  30px;
+			left:  320px;
+		}
 		
 		.myButton {
 			-moz-box-shadow:inset 0px 34px 0px -15px #b54b3a;
@@ -75,6 +87,9 @@
 
 	<a id="abs_inc" class="myButton">ABS</a>
 	<a id="mm_inch" class="myButton">MM</a>
+
+	<img id="button_units" src="images/mm.jpg">
+	<img id="button_mode" src="images/abs.jpg">
 
 </body>
 </html>
